Fixed play button spacing

--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,7 @@ body {
   width: 43px;
   position: absolute;
   top: 20px;
-  left: 400px;
+  left: 300px;
   color: rgba(107, 107, 107, 1);
 }
 
